# madaudio

./: .gitignore  Makefile.am  configure.ac
.tx/: config
codecs/: Makefile.am  hq.desktop  mp3.desktop
data/: Makefile.am  madaudio.desktop  madaudio.ini  mpd.conf  recorder.desktop
debian/: changelog  control  copyright  madaudio-mp3.install  madaudio.install  rules
help/: Makefile.am  en.po  madaudio.pot  ru.po  uk.po
po/: Makefile.am  POTFILES  bg.po  cs.po  de.po  fr.po  hq.desktop.in  hu.po  it.po  lv.po  madaudio.desktop.in  madaudio.pot  mp3.desktop.in  pl.po  recorder.desktop.in  ru.po  sv.po  uk.po  zh_CN.po
scripts/: Makefile.am  madaudio-dictophone  madaudio-unsuspend.sh
src/: Makefile.am  battery.c  battery.h  clock.c  empd_io.c  empd_recv.c  empd_send.c  madaudio.c  madaudio.h  madaudio_cmd.c  madaudio_config.c  madaudio_draw.c  madaudio_load.c  madaudio_meter.c  madaudio_play.c  madaudio_record.c  madaudio_unsuspend.c
src/configlet/: Makefile.am  configlet.c
themes/: Makefile.am  madaudio.edc  madaudio.edj
themes/azbooka/: Makefile.am
themes/default/: Makefile.am
